Add recipe image, description, ingredients and steps

--- a/recipes/haitian-griot.html
+++ b/recipes/haitian-griot.html
@@ -8,5 +8,38 @@
 </head>
 <body>
     <h1>Haitian Griot</h1>
+    <img src="../images/meats-haitian-griots-psu.edu-4986-4x3.jpg" alt="A picture of Haitian Griot cooked">
+    
+    <h2>Description</h2>
+    <p>Griots is a rich, flavorful dish and is one of Haiti's most popular, invariably served at parties and family gatherings. Cubes of pork are soaked in a sour orange marinade and then slow-roasted until tender. The tender morsels are then given a finally fry in oil until delectably caramelized. This recipe uses a mixture of orange and lime juice in place of the hard-to-find sour orange juice. Also spelled grillots, griyo, griyot or griot.</p>
+    <p>6 to 8 servings</p>
+
+    <div id="ingredients">
+        <h2>Ingredients</h2>
+        <ul>
+            <li>Pork shoulder, cubed -- 4 pounds</li>
+            <li>Onion, thinly sliced -- 1</li>
+            <li>Green or red bell pepper, thinly sliced -- 1</li>
+            <li>Scotch bonnet peppers, chopped (optional) -- 1 or 2</li>
+            <li>Shallots, thinly sliced -- 2 or 3</li>
+            <li>Garlic, chopped -- 3 or 4 cloves</li>
+            <li>Thyme -- 2 teaspoons</li>
+            <li>Salt -- 2 teaspoons</li>
+            <li>Pepper -- 1 teaspoon</li>
+            <li>Oranges -- 2</li>
+            <li>Limes -- 3</li>
+            <li>Oil -- 1/4 cup</li>
+        </ul>
+    </div>
+
+    <div id="steps">
+        <h2>Steps</h2>
+        <ol>
+            <li>Add the pork and all the other ingredients except the oil to a large, non-reactive bowl and mixt together well. Refrigerate for 4 to 24 hours to let the meat soak up the marinade.</li>
+            <li>Oven to 375°F. Place the pork and its marinade into a large roasting pan and cover tightly with a lid or aluminum foil. Place in the oven and roast for 1 1/2 to 2 hours, or until the pork is tender.</li>
+            <li>Remove the roasting pan from the oven. Remove any extra liquid in the pan, putting it into a saucepan, and set aside. Add the oil to the pan and stir it into the meat. Return the roasting pan to the oven and let the pork cook for 20 to 30 minutes more, stirring occasionally. Any liquid will evaporate away and the meat will begin to fry in the oil and brown.</li>
+            <li>While the meat is frying in the oven, place the saucepan with the reserved liquid on the top of the stove and boil it down until it is well reduced and thickens. Remove the roasting pan from the oven and mix the reduced sauce into the browned pork. Serve hot with with <i>sos ti-malice</i>, <i>banan peze</i> and a side of <i>pikliz</i>.</li>
+        </ol>
+    </div>
 </body>
 </html>
