Add nav-bar and styling to haitian-griot.html

--- a/recipes/haitian-griot.html
+++ b/recipes/haitian-griot.html
@@ -4,18 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Haitian Griot</title>
 </head>
 <body>
-    <h1>Haitian Griot</h1>
-    <img src="../images/meats-haitian-griots-psu.edu-4986-4x3.jpg" alt="A picture of Haitian Griot cooked">
+    <h1 class="recipe-title">Haitian Griot</h1>
+
+    <ul class="top-nav">
+        <li><a href="../index.html">Home</a></li>
+        <li><a href=#>Recipies</a></li>
+    </ul>
+
+    <img class="recipe-image" src="../images/meats-haitian-griots-psu.edu-4986-4x3.jpg" alt="A picture of Haitian Griot cooked">
     
-    <h2>Description</h2>
+    <h2 class="section-title">Description</h2>
     <p>Griots is a rich, flavorful dish and is one of Haiti's most popular, invariably served at parties and family gatherings. Cubes of pork are soaked in a sour orange marinade and then slow-roasted until tender. The tender morsels are then given a finally fry in oil until delectably caramelized. This recipe uses a mixture of orange and lime juice in place of the hard-to-find sour orange juice. Also spelled grillots, griyo, griyot or griot.</p>
     <p>6 to 8 servings</p>
 
     <div id="ingredients">
-        <h2>Ingredients</h2>
+        <h2 class="section-title">Ingredients</h2>
         <ul>
             <li>Pork shoulder, cubed -- 4 pounds</li>
             <li>Onion, thinly sliced -- 1</li>
@@ -33,7 +40,7 @@
     </div>
 
     <div id="steps">
-        <h2>Steps</h2>
+        <h2 class="section-title">Steps</h2>
         <ol>
             <li>Add the pork and all the other ingredients except the oil to a large, non-reactive bowl and mixt together well. Refrigerate for 4 to 24 hours to let the meat soak up the marinade.</li>
             <li>Oven to 375°F. Place the pork and its marinade into a large roasting pan and cover tightly with a lid or aluminum foil. Place in the oven and roast for 1 1/2 to 2 hours, or until the pork is tender.</li>
